<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llShop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="SHOP"
        android:textAllCaps="true"
        android:textColor="@color/purple_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvHeading"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border_purple"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layoutShopSell"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Sell"
                android:textColor="@color/purple_dark"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutShopRent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Rent"
                android:textColor="@color/purple_dark"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llButton"
        android:layout_below="@+id/llType"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtFloorNo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_input"
            android:drawableStart="@drawable/custom_state"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="Enter Floor Number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="12dp"
            android:textColor="@color/purple_dark"
            android:textColorHint="@color/grey"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtBuiltUpAreaShop"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_input"
            android:drawableStart="@drawable/custom_area"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/built_up_area_in_sq_ft"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="12dp"
            android:textColor="@color/purple_dark"
            android:textColorHint="@color/grey"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtExpectedPrice"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_input"
            android:drawableStart="@drawable/custom_rupee"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/expected_price"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="12dp"
            android:textColor="@color/purple_dark"
            android:textColorHint="@color/grey"
            android:textSize="14sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShopRent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtExpectedRent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_input"
                android:drawableStart="@drawable/custom_rupee"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/expected_rent"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="12dp"
                android:textColor="@color/purple_dark"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtExpectedDeposit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_input"
                android:drawableStart="@drawable/custom_rupee"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/expected_deposit"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="12dp"
                android:textColor="@color/purple_dark"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/duration"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtAddress">

                <TextView
                    android:id="@+id/tvStartDateShop"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_input"
                    android:drawableStart="@drawable/custom_calendar"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="From Date"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:textColor="@color/purple_dark"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvEndDateShop"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_input"
                    android:drawableStart="@drawable/custom_calendar"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="To Date"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:textColor="@color/purple_dark"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvShopAmenities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/shop_amenities"
            android:textColor="@color/purple_dark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShopAmenity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:textColor="@color/purple_dark"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llShopAddAmenity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtShopAddAmenity"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1.6"
                android:background="@drawable/border_input"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="Enter Shop Amenity"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:textColor="@color/purple_dark"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShopAddAmenity"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_purple"
                android:text="Add" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="Purpose"
            android:textColor="@color/purple_dark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShopPurpose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:textColor="@color/purple_dark"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/maintenance_charges"
            android:textColor="@color/purple_dark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShopMaintenance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:textColor="@color/purple_dark"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackShop"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_purple"
            android:text="Back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmitShop"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_purple"
            android:text="Submit" />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>